--- a/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
+++ b/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
@@ -7,7 +7,7 @@
                          xmlns:pages="clr-namespace:ScanbotSDK.MAUI.Example.Pages"
                          x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeClassicComponentPage"
                          ios:Page.UseSafeArea="true"
-                         Title="BarcodeClassicComponentPage"
+                         Title="Classic Component"
                          NavigationPage.HasNavigationBar="True">
     <Grid RowSpacing="10">
         <Grid.RowDefinitions>
@@ -18,14 +18,13 @@
         <Grid Grid.Row="0">
             <classicComponent:ScanbotClassicUIContainer>
                 <classicComponent:BarcodeScannerView
-                    x:Name="cameraView"
+                    x:Name="CameraView"
                     OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult" />
             </classicComponent:ScanbotClassicUIContainer>
         </Grid>
         <ScrollView Grid.Row="1">
             <StackLayout>
                 <Label
-                    x:Name="lblResultCaption"
                     Text="Result"
                     FontAttributes="Bold"
                     FontSize="18"
@@ -34,7 +33,7 @@
                     VerticalOptions="Center"
                     HorizontalOptions="Center" />
                 <Label
-                    x:Name="lblResult"
+                    x:Name="ResultLabel"
                     Margin="15,10"
                     HorizontalTextAlignment="Center"
                     VerticalTextAlignment="Center"
