--- a/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
+++ b/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
@@ -6,7 +6,7 @@
                    xmlns:pages="clr-namespace:ScanbotSDK.MAUI.Example.Pages"
                    x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeScanAndCountClassicComponentPage"
                    ios:Page.UseSafeArea="true"
-                   Title="BarcodeClassicScanAndCountComponentPage"
+                   Title="Classic ScanAndCount"
                    NavigationPage.HasNavigationBar="True">
     <Grid RowSpacing="10">
         <Grid.RowDefinitions>
@@ -15,10 +15,9 @@
         </Grid.RowDefinitions>
         <Grid 
             Grid.Row="0">
-            <classicComponent:ScanbotClassicUIContainer 
-                Grid.Row="1">
+            <classicComponent:ScanbotClassicUIContainer>
                 <classicComponent:BarcodeScanAndCountView
-                    x:Name="cameraView"
+                    x:Name="CameraView"
                     OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
                     OnScanAndCountFinished="CameraView_OnOnScanAndCountFinished"/>
             </classicComponent:ScanbotClassicUIContainer>
@@ -44,7 +43,6 @@
                 </StackLayout>
                 <StackLayout>
                     <Label
-                        x:Name="lblResultCaption"
                         Text="Result"
                         FontAttributes="Bold"
                         FontSize="18"
@@ -53,7 +51,7 @@
                         VerticalOptions="Center"
                         HorizontalOptions="Center" />
                     <Label
-                        x:Name="lblResult"
+                        x:Name="ResultLabel"
                         Margin="15,10"
                         HorizontalTextAlignment="Center"
                         VerticalTextAlignment="Center"
