--- a/BarcodeSDK.MAUI.Example/Pages/BarcodeResults/BarcodeResultDetailPage.xaml
+++ b/BarcodeSDK.MAUI.Example/Pages/BarcodeResults/BarcodeResultDetailPage.xaml
@@ -9,8 +9,7 @@
     <ContentPage.Content>
         <CollectionView
             x:Name="CollectionViewBarcodeDetails"
-            BackgroundColor="White"
-            Margin="0,0,0,50">
+            BackgroundColor="White">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="page:BarcodeDetailModel">
                     <VerticalStackLayout
