MAUI BS 7.0 - Update to the latest nuget package - Updated the classic component result handling wrt to latest changes - Remvoed the Classic Container view.

--- a/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
+++ b/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
@@ -14,12 +14,10 @@
             <RowDefinition Height="7*" />
             <RowDefinition Height="3*" />
         </Grid.RowDefinitions>
-        <classicComponent:ScanbotClassicUIContainer
-            Grid.Row="0">
-            <classicComponent:BarcodeScannerView
-                x:Name="CameraView"
-                OnSelectBarcodeResult="CameraView_OnOnSelectBarcodeResult" />
-        </classicComponent:ScanbotClassicUIContainer>
+        <classicComponent:BarcodeScannerView
+            x:Name="CameraView"
+            Grid.Row="0"
+            OnSelectBarcodeResult="CameraView_OnOnSelectBarcodeResult" />
         <StackLayout
             Grid.Row="1">
             <Label
