--- a/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
+++ b/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
@@ -3,33 +3,24 @@
 <pages:BaseComponentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                          xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                          xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-                         xmlns:classicComponent="clr-namespace:ScanbotSDK.MAUI.ClassicComponent;assembly=ScanbotSDK.Shared"
+                         xmlns:classicComponent="clr-namespace:ScanbotSDK.MAUI.Barcode.ClassicComponent;assembly=ScanbotSDK.Shared"
                          xmlns:pages="clr-namespace:ScanbotSDK.MAUI.Example.Pages"
+                         x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeArOverlayClassicComponentPage"
                          ios:Page.UseSafeArea="true"
-                         Title="BarcodeARClassicComponentPage"
-                         NavigationPage.HasNavigationBar="True"
-                         x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeArOverlayClassicComponentPage">
+                         Title="Classic AR Overlay"
+                         NavigationPage.HasNavigationBar="True">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
             <RowDefinition Height="7*" />
-            <RowDefinition Height="2*" />
+            <RowDefinition Height="3*" />
         </Grid.RowDefinitions>
-        <Label Grid.Row="0"
-               Text="Barcode Classic Component"
-               FontSize="Subtitle"
-               VerticalTextAlignment="Center"
-               HorizontalTextAlignment="Center"
-               VerticalOptions="Center"
-               HorizontalOptions="Fill" />
-        <classicComponent:ScanbotClassicUIContainer Grid.Row="1">
-            <classicComponent:BarcodeScannerView
-                x:Name="cameraView"
-                OnSelectBarcodeResult="CameraView_OnOnSelectBarcodeResult" />
-        </classicComponent:ScanbotClassicUIContainer>
-        <StackLayout Grid.Row="2">
+        <classicComponent:BarcodeScannerView
+            x:Name="CameraView"
+            Grid.Row="0"
+            OnSelectBarcodeResult="CameraView_OnOnSelectBarcodeResult" />
+        <StackLayout
+            Grid.Row="1">
             <Label
-                x:Name="lblResultCaption"
                 Text="Result"
                 FontAttributes="Bold"
                 FontSize="18"
@@ -38,7 +29,7 @@
                 VerticalOptions="Center"
                 HorizontalOptions="Center" />
             <Label
-                x:Name="lblResult"
+                x:Name="ResultLabel"
                 Margin="15,10"
                 HorizontalTextAlignment="Center"
                 VerticalTextAlignment="Center"
