--- a/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
+++ b/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
@@ -3,29 +3,25 @@
 <pages:BaseComponentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                          xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                          xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-                         xmlns:classicComponent="clr-namespace:ScanbotSDK.MAUI.ClassicComponent;assembly=ScanbotSDK.Shared"
+                         xmlns:classicComponent="clr-namespace:ScanbotSDK.MAUI.Barcode.ClassicComponent;assembly=ScanbotSDK.Shared"
                          xmlns:pages="clr-namespace:ScanbotSDK.MAUI.Example.Pages"
                          x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeClassicComponentPage"
                          ios:Page.UseSafeArea="true"
-                         Title="BarcodeClassicComponentPage"
+                         Title="Classic Component"
                          NavigationPage.HasNavigationBar="True">
     <Grid RowSpacing="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="7*" />
             <RowDefinition Height="3*" />
         </Grid.RowDefinitions>
-
         <Grid Grid.Row="0">
-            <classicComponent:ScanbotClassicUIContainer>
-                <classicComponent:BarcodeScannerView
-                    x:Name="cameraView"
-                    OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult" />
-            </classicComponent:ScanbotClassicUIContainer>
+            <classicComponent:BarcodeScannerView
+                x:Name="CameraView"
+                OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult" />
         </Grid>
         <ScrollView Grid.Row="1">
             <StackLayout>
                 <Label
-                    x:Name="lblResultCaption"
                     Text="Result"
                     FontAttributes="Bold"
                     FontSize="18"
@@ -34,7 +30,7 @@
                     VerticalOptions="Center"
                     HorizontalOptions="Center" />
                 <Label
-                    x:Name="lblResult"
+                    x:Name="ResultLabel"
                     Margin="15,10"
                     HorizontalTextAlignment="Center"
                     VerticalTextAlignment="Center"
