--- a/BarcodeSDK.NET.Droid.Example/Resources/layout/barcode_classic_activity.xml
+++ b/BarcodeSDK.NET.Droid.Example/Resources/layout/barcode_classic_activity.xml
@@ -1,5 +1,6 @@
 ﻿<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools" 
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="BarcodeScannerExample.Droid.BarcodeClassicComponentActivity">
@@ -8,13 +9,6 @@
         android:id="@+id/camera"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-    <View
-        android:id="@+id/finder_overlay"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:background="@drawable/container_bg" />
 
     <TextView
         android:id="@+id/snapped_message"
