--- a/BarcodeSDK.MAUI.Example/Pages/BarcodeResults/BarcodeResultPage.xaml
+++ b/BarcodeSDK.MAUI.Example/Pages/BarcodeResults/BarcodeResultPage.xaml
@@ -2,109 +2,70 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converter="clr-namespace:ScanbotSDK.MAUI.Example.Utils.XamlValueConverters"
+             xmlns:models="clr-namespace:ScanbotSDK.MAUI.Barcode.Core;assembly=ScanbotSDK.Shared"
              x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeResultPage"
-             Title="BarcodeResultPage"
-             xmlns:barcodeTempalte="clr-namespace:ScanbotSDK.MAUI.Example.Pages">
+             Title="Barcode Results">
     <ContentPage.Resources>
-        <DataTemplate x:Key="barcodeV1Template">
-            <ViewCell>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="8*" />
-                    </Grid.ColumnDefinitions>
-                    <Image
-                        Grid.Column="0"
-                        Source="{Binding Image}"
-                        WidthRequest="50"
-                        HeightRequest="50"
-                        VerticalOptions="Center" />
-                    <StackLayout Grid.Column="1">
-                        <Label Text="{Binding Format}"
-                               VerticalOptions="Start"
-                               HorizontalOptions="Start"
-                               FontAttributes="Bold" />
-                        <Label Text="{Binding Text}"
-                               VerticalOptions="Start"
-                               HorizontalOptions="Start" />
-                    </StackLayout>
-                </Grid>
-            </ViewCell>
-        </DataTemplate>
-
-        <DataTemplate x:Key="barcodeV2Template">
-            <ViewCell>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="50" />
-                    </Grid.ColumnDefinitions>
-                    <!-- Currently there is no image received, so this section is hidden -->
-                    <Image
-                        Grid.Column="0"
-                        Source="{Binding Image}"
-                        WidthRequest="50"
-                        HeightRequest="50"
-                        VerticalOptions="Center" />
-                    <StackLayout
-                        Grid.Column="1"
-                        Margin="5">
-                        <Label Margin="0,5,0,0"
-                               Text="Barcode Type: "
-                               FontAttributes="Bold"
-                               FontSize="18" 
-                               TextColor="DarkGray"/>
-                        <Label
-                            Text="{Binding Type}"
-                            VerticalOptions="Start"
-                            HorizontalOptions="Start"
-                            FontAttributes="Bold" />
-                        <Label
-                            Margin="0,5,0,0"
-                            Text="Text: "
-                            FontAttributes="Bold"
-                            FontSize="18" 
-                            TextColor="DarkGray"/>
-                        <Label Text="{Binding Text}"
-                               MaxLines="3"/>
-                    </StackLayout>
-                    <Grid Grid.Column="2" >
-                        <Label Text=">" 
-                               FontSize="20"
-                               FontAttributes="Bold"
-                               VerticalOptions="Center"
-                               HorizontalOptions="Center"/>
-                    </Grid>
-                </Grid>
-            </ViewCell>
-        </DataTemplate>
-
-        <barcodeTempalte:BarcodeResultTemplateSelector
-            x:Key="barcodeResultTemplate"
-            BarcodeV1Template="{StaticResource barcodeV1Template}"
-            BarcodeV2Template="{StaticResource barcodeV2Template}" />
-
+        <converter:ImageRefToSourceConverter x:Key="ConvertImageRefToSource" />
     </ContentPage.Resources>
-    <StackLayout>
-        <StackLayout Grid.Row="0">
-            <Image Grid.Row="1"
-                   x:Name="imageView"
-                   Aspect="AspectFit"
-                   MaximumHeightRequest="300"
-                   VerticalOptions="CenterAndExpand"
-                   HorizontalOptions="CenterAndExpand"
-                   BackgroundColor="Transparent" />
-        </StackLayout>
-        <ListView x:Name="ListView_Results"
+    <StackLayout
+        BackgroundColor="White">
+        <ListView x:Name="ListViewResults"
                   HasUnevenRows="True"
-                  ItemTemplate="{StaticResource barcodeResultTemplate}"
                   ItemSelected="ListView_Results_OnItemSelected">
-            <ListView.FooterTemplate>
-                <DataTemplate>
-                    <Grid BackgroundColor="#c8193c" HeightRequest="50" />
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:BarcodeItem">
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="90" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="50" />
+                            </Grid.ColumnDefinitions>
+                            <Image
+                                Grid.Column="0"
+                                HorizontalOptions="Fill"
+                                VerticalOptions="Fill"
+                                Aspect="AspectFit"
+                                Source="{Binding SourceImage, Converter={StaticResource ConvertImageRefToSource}}" />
+                            <VerticalStackLayout
+                                Grid.Column="1"
+                                Margin="5">
+                                <Label Margin="0,5,0,0"
+                                       Text="Format:"
+                                       FontAttributes="Bold"
+                                       FontSize="16"
+                                       TextColor="Black" />
+                                <Label
+                                    Text="{Binding Format}"
+                                    VerticalOptions="Start"
+                                    HorizontalOptions="Start"
+                                    FontAttributes="Bold"
+                                    FontSize="14"
+                                    TextColor="Black" />
+                                <Label
+                                    Margin="0,9,0,0"
+                                    Text="Text: "
+                                    FontAttributes="Bold"
+                                    FontSize="16"
+                                    TextColor="Black" />
+                                <Label Text="{Binding Text}"
+                                       FontSize="14"
+                                       MaxLines="3"
+                                       TextColor="Black" />
+                            </VerticalStackLayout>
+                            <Grid Grid.Column="2">
+                                <Label Text=">"
+                                       FontSize="20"
+                                       FontAttributes="Bold"
+                                       VerticalOptions="Center"
+                                       HorizontalOptions="Center" />
+                            </Grid>
+                        </Grid>
+                    </ViewCell>
                 </DataTemplate>
-            </ListView.FooterTemplate>
+            </ListView.ItemTemplate>
         </ListView>
     </StackLayout>
 </ContentPage>
