--- a/BarcodeSDK.MAUI.Example/HomePage.xaml
+++ b/BarcodeSDK.MAUI.Example/HomePage.xaml
@@ -2,8 +2,8 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ScanbotSDK.MAUI.Example.Pages.HomePage"
-             xmlns:model="clr-namespace:ScanbotSDK.MAUI.Example.Pages">
+             xmlns:model="clr-namespace:ScanbotSDK.MAUI.Example"
+             x:Class="ScanbotSDK.MAUI.Example.HomePage">
     <Grid
         BackgroundColor="{DynamicResource ScanbotRed}"
         RowDefinitions="Auto,*">
