MAUI BS 7.1: Added classic component MVVM example

--- a/BarcodeSDK.MAUI.Example/HomePage.xaml
+++ b/BarcodeSDK.MAUI.Example/HomePage.xaml
@@ -36,6 +36,7 @@
                                     Text="{Binding Title}"
                                     VerticalOptions="CenterAndExpand"
                                     HorizontalOptions="CenterAndExpand"
+                                    HorizontalTextAlignment="Center"
                                     FontSize="Default"
                                     TextColor="Black" />
                                 <StackLayout
