--- a/BarcodeSDK.MAUI.Example/ClassicUI/Pages/BarcodeClassicComponentPage.xaml
+++ b/BarcodeSDK.MAUI.Example/ClassicUI/Pages/BarcodeClassicComponentPage.xaml
@@ -17,7 +17,7 @@
         <Grid Grid.Row="0">
             <classicComponent:BarcodeScannerView
                 x:Name="CameraView"
-                OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult" />
+                OnBarcodeScanResult="OnBarcodeScanResult" />
         </Grid>
         <ScrollView Grid.Row="1">
             <StackLayout>
