--- a/BarcodeSDK.MAUI.Example/ClassicUI/Pages/BarcodeScanAndCountClassicComponentPage.xaml
+++ b/BarcodeSDK.MAUI.Example/ClassicUI/Pages/BarcodeScanAndCountClassicComponentPage.xaml
@@ -7,19 +7,15 @@
                          xmlns:pages="clr-namespace:ScanbotSDK.MAUI.Example.ClassicUI"
                          x:Class="ScanbotSDK.MAUI.Example.ClassicUI.Pages.BarcodeScanAndCountClassicComponentPage"
                          ios:Page.UseSafeArea="true"
-                         Title="Classic ScanAndCount"
-                         NavigationPage.HasNavigationBar="True">
-    <Grid RowSpacing="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="7*" />
-            <RowDefinition Height="3*" />
-        </Grid.RowDefinitions>
+                         Title="Classic ScanAndCount">
+    <Grid RowSpacing="10"
+          RowDefinitions="7*,3*">
         <Grid
             Grid.Row="0">
             <classicComponent:BarcodeScanAndCountView
                 x:Name="CameraView"
-                OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
-                OnScanAndCountFinished="CameraView_OnOnScanAndCountFinished" />
+                OnBarcodeScanResult="OnBarcodeScanResult"
+                OnScanAndCountFinished="OnScanAndCountFinished" />
         </Grid>
         <ScrollView Grid.Row="1">
             <StackLayout>
@@ -32,13 +28,13 @@
                         x:Name="StartScanningButton"
                         Text="Capture"
                         VerticalOptions="Center"
-                        Clicked="StartScanningButton_Clicked" />
+                        Clicked="OnStartScanningButtonClicked" />
                     <Button
                         x:Name="ContinueScanningButton"
                         Text="Continue"
                         VerticalOptions="Center"
                         IsEnabled="False"
-                        Clicked="ConitueScanningButton_Clicked" />
+                        Clicked="OnContinueScanningButtonClicked" />
                 </StackLayout>
                 <StackLayout>
                     <Label
