--- a/BarcodeSDK.MAUI.Example/HomePage.xaml
+++ b/BarcodeSDK.MAUI.Example/HomePage.xaml
@@ -20,10 +20,9 @@
                 BackgroundColor="Transparent"
                 FontSize="24" />
         </VerticalStackLayout>
-        <StackLayout
-            Grid.Row="1"
-            BackgroundColor="White">
             <CollectionView
+                Grid.Row="1"
+                BackgroundColor="WhiteSmoke"
                 x:Name="CollectionViewMenuItems"
                 ItemsSource="{Binding MenuItems}"
                 SelectionMode="Single">
@@ -64,6 +63,5 @@
                     </DataTemplate>
                 </CollectionView.FooterTemplate>
             </CollectionView>
-        </StackLayout>
     </Grid>
 </ContentPage>
