MAUI BS 8.0: - Updated the BindingContext for MVVM EventHandler to Command converter code.

--- a/BarcodeSDK.MAUI.Example/ClassicUI/MVVM/Views/BarcodeClassicComponentView.xaml
+++ b/BarcodeSDK.MAUI.Example/ClassicUI/MVVM/Views/BarcodeClassicComponentView.xaml
@@ -21,7 +21,7 @@
                 <classicComponent:BarcodeScannerView.Behaviors>
                     <toolkit:EventToCommandBehavior
                         EventName="OnBarcodeScanResult"
-                        Command="{Binding BarcodeScanResultCommand}"
+                        Command="{Binding BindingContext.BarcodeScanResultCommand, Source={x:Reference CameraView}}"
                         EventArgsConverter="{converters:BarcodeDetectionEventArgsConverter}"/>
                 </classicComponent:BarcodeScannerView.Behaviors>
             </classicComponent:BarcodeScannerView>
