MAUI BS 8.0: Droid - Update the label color consistent to label in iOS

--- a/BarcodeSDK.MAUI.Example/BarcodeTypesSelectionPage.xaml
+++ b/BarcodeSDK.MAUI.Example/BarcodeTypesSelectionPage.xaml
@@ -23,7 +23,8 @@
                         <Label
                             Grid.Column="0"
                             Text="{Binding Key}"
-                            VerticalOptions="Center" />
+                            VerticalOptions="Center"
+                            TextColor="Black" />
                         <Switch
                             Grid.Column="1"
                             IsToggled="{Binding Value}"
